# GreenLogic

./: .gitignore  Dockerfile  README.md  agent.py  aiAgent.js  app.js  app.py  baselineInference.js  crops.js  envRules.js  farm.js  graders.py  greenlogic_agent.py  greenlogic_models.py  greenlogic_openenv.py  index.html  inference.py  openenv.yaml  openenv_api.py  package.json  pyproject.toml  requirements.txt  runAI.js  run_inference.py  scoring.js  script.js  server.js  soilixa_agent.py  soilixa_models.py  soilixa_openenv.py  styles.css  test_comparison_endpoint.js  test_demo_endpoint.js  train.py  weather.js
artifacts/: q_table.json  training_history.json
lib/: simulation.js
server/: __init__.py  app.py
