[project]
name = "greenlogic"
version = "0.1.0"
description = "Intelligent crop learning through guided simulation"
requires-python = ">=3.9"
dependencies = [
    "openenv-core>=0.2.0",
    "streamlit",
    "flask",
    "gunicorn",
    "numpy"
]

[project.scripts]
server = "server.app:main"
inference = "inference:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "greenlogic_openenv",
    "greenlogic_models",
    "greenlogic_agent",
    "graders",
    "run_inference",
    "inference",
    "openenv_api"
]

[tool.setuptools.packages.find]
include = ["server", "server.*"]
